cluster-critical/traefik/templates/traefik-ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: dashboard
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`traefik.framsburg.ch`)
#       priority: 10
#       services:
#         - name: api@internal
#           kind: TraefikService
#   tls:
#     secretName: traefik-framsburg-ch-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboardtls
  annotations:
    # used only to automate certificate and dns. Point to metrics to ensure its not used
    traefik.ingress.kubernetes.io/router.entrypoints: metrics
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.framsburg.ch
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: "traefik"
                port:
                  number: 80
  tls:
    - hosts:
      - traefik.framsburg.ch
      secretName: traefik-framsburg-ch-tls
